assignment-6/Assignment6/y.output
Terminals unused in grammar

    STRUCT
    TYPEDEF
    UNION
    SINGLE_LINE_COMMENT
    MULTI_LINE_COMMENT
    ENUMERATION_CONSTANT
    UNARY


State 342 conflicts: 1 reduce/reduce


Grammar

    0 $accept: translation_unit $end

    1 M: %empty

    2 N: %empty

    3 primary_expression: IDENTIFIER
    4                   | INTEGER_CONSTANT
    5                   | FLOATING_CONSTANT
    6                   | CHAR_CONST
    7                   | STRING_LITERAL
    8                   | '(' expression ')'

    9 enumeration_constant: IDENTIFIER

   10 postfix_expression: primary_expression
   11                   | postfix_expression '[' expression ']'
   12                   | postfix_expression '(' argument_expression_list_opt ')'
   13                   | postfix_expression '.' IDENTIFIER
   14                   | postfix_expression POINTER IDENTIFIER
   15                   | postfix_expression INCREMENT
   16                   | postfix_expression DECREMENT
   17                   | '(' type_name ')' '{' initializer_list '}'
   18                   | '(' type_name ')' '{' initializer_list ',' '}'

   19 argument_expression_list: assignment_expression
   20                         | argument_expression_list ',' assignment_expression

   21 argument_expression_list_opt: argument_expression_list
   22                             | %empty

   23 unary_expression: postfix_expression
   24                 | INCREMENT unary_expression
   25                 | DECREMENT unary_expression
   26                 | unary_operator cast_expression
   27                 | SIZEOF unary_expression
   28                 | SIZEOF '(' type_name ')'

   29 unary_operator: '&'
   30               | '*'
   31               | '+'
   32               | '-'
   33               | '~'
   34               | '!'

   35 cast_expression: unary_expression
   36                | '(' type_name ')' cast_expression

   37 multiplicative_expression: cast_expression
   38                          | multiplicative_expression '*' cast_expression
   39                          | multiplicative_expression '/' cast_expression
   40                          | multiplicative_expression '%' cast_expression

   41 additive_expression: multiplicative_expression
   42                    | additive_expression '+' multiplicative_expression
   43                    | additive_expression '-' multiplicative_expression

   44 shift_expression: additive_expression
   45                 | shift_expression LEFT_SHIFT additive_expression
   46                 | shift_expression RIGHT_SHIFT additive_expression

   47 relational_expression: shift_expression
   48                      | relational_expression '<' shift_expression
   49                      | relational_expression '>' shift_expression
   50                      | relational_expression LESS_EQUALS shift_expression
   51                      | relational_expression GREATER_EQUALS shift_expression

   52 equality_expression: relational_expression
   53                    | equality_expression EQUALS relational_expression
   54                    | equality_expression NOT_EQUALS relational_expression

   55 AND_expression: equality_expression
   56               | AND_expression '&' equality_expression

   57 exclusive_OR_expression: AND_expression
   58                        | exclusive_OR_expression '^' AND_expression

   59 inclusive_OR_expression: exclusive_OR_expression
   60                        | inclusive_OR_expression '|' exclusive_OR_expression

   61 logical_AND_expression: inclusive_OR_expression
   62                       | logical_AND_expression AND M inclusive_OR_expression

   63 logical_OR_expression: logical_AND_expression
   64                      | logical_OR_expression OR M logical_AND_expression

   65 conditional_expression: logical_OR_expression
   66                       | logical_OR_expression N '?' M expression N ':' M conditional_expression

   67 assignment_operator: '='
   68                    | MULTIPLY_ASSIGN
   69                    | DIVIDE_ASSIGN
   70                    | MODULO_ASSIGN
   71                    | ADD_ASSIGN
   72                    | SUBTRACT_ASSIGN
   73                    | LEFT_SHIFT_ASSIGN
   74                    | RIGHT_SHIFT_ASSIGN
   75                    | AND_ASSIGN
   76                    | XOR_ASSIGN
   77                    | OR_ASSIGN

   78 assignment_expression: conditional_expression
   79                      | unary_expression assignment_operator assignment_expression

   80 constant_expression: conditional_expression

   81 expression: assignment_expression
   82           | expression ',' assignment_expression

   83 declaration: declaration_specifiers init_declarator_list_opt ';'

   84 init_declarator_list_opt: init_declarator_list
   85                         | %empty

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt
   87                       | type_specifier declaration_specifiers_opt
   88                       | type_qualifier declaration_specifiers_opt
   89                       | function_specifier declaration_specifiers_opt

   90 declaration_specifiers_opt: declaration_specifiers
   91                           | %empty

   92 init_declarator_list: init_declarator
   93                     | init_declarator_list ',' init_declarator

   94 init_declarator: declarator
   95                | declarator '=' initializer

   96 storage_class_specifier: EXTERN
   97                        | STATIC
   98                        | AUTO
   99                        | REGISTER

  100 type_specifier: VOID
  101               | CHAR
  102               | SHORT
  103               | INT
  104               | LONG
  105               | FLOAT
  106               | DOUBLE
  107               | SIGNED
  108               | UNSIGNED
  109               | BOOL
  110               | COMPLEX
  111               | IMAGINARY
  112               | enum_specifier

  113 specifier_qualifier_list: type_specifier specifier_qualifier_list_opt
  114                         | type_qualifier specifier_qualifier_list_opt

  115 specifier_qualifier_list_opt: specifier_qualifier_list
  116                             | %empty

  117 enum_specifier: ENUM identifier_opt '{' enumerator_list '}'
  118               | ENUM identifier_opt '{' enumerator_list ',' '}'
  119               | ENUM IDENTIFIER

  120 identifier_opt: IDENTIFIER
  121               | %empty

  122 enumerator_list: enumerator
  123                | enumerator_list ',' enumerator

  124 enumerator: enumeration_constant
  125           | enumeration_constant '=' constant_expression

  126 type_qualifier: CONST
  127               | RESTRICT
  128               | VOLATILE

  129 function_specifier: INLINE

  130 declarator: pointer_opt direct_declarator

  131 pointer_opt: pointer
  132            | %empty

  133 direct_declarator: IDENTIFIER
  134                  | '(' declarator ')'
  135                  | direct_declarator '[' type_qualifier_list_opt assignment_expression_opt ']'
  136                  | direct_declarator '[' STATIC type_qualifier_list_opt assignment_expression ']'
  137                  | direct_declarator '[' type_qualifier_list STATIC assignment_expression ']'
  138                  | direct_declarator '[' type_qualifier_list_opt '*' ']'
  139                  | direct_declarator '(' parameter_type_list ')'
  140                  | direct_declarator '(' identifier_list_opt ')'

  141 type_qualifier_list_opt: type_qualifier_list
  142                        | %empty

  143 assignment_expression_opt: assignment_expression
  144                          | %empty

  145 identifier_list_opt: identifier_list
  146                    | %empty

  147 pointer: '*' type_qualifier_list_opt
  148        | '*' type_qualifier_list_opt pointer

  149 type_qualifier_list: type_qualifier
  150                    | type_qualifier_list type_qualifier

  151 parameter_type_list: parameter_list
  152                    | parameter_list ',' ELLIPSIS

  153 parameter_list: parameter_declaration
  154               | parameter_list ',' parameter_declaration

  155 parameter_declaration: declaration_specifiers declarator
  156                      | declaration_specifiers

  157 identifier_list: IDENTIFIER
  158                | identifier_list ',' IDENTIFIER

  159 type_name: specifier_qualifier_list

  160 initializer: assignment_expression
  161            | '{' initializer_list '}'
  162            | '{' initializer_list ',' '}'

  163 initializer_list: designation_opt initializer
  164                 | initializer_list ',' designation_opt initializer

  165 designation_opt: designation
  166                | %empty

  167 designation: designator_list '='

  168 designator_list: designator
  169                | designator_list designator

  170 designator: '[' constant_expression ']'
  171           | '.' IDENTIFIER

  172 statement: labeled_statement
  173          | compound_statement
  174          | expression_statement
  175          | selection_statement
  176          | iteration_statement
  177          | jump_statement

  178 labeled_statement: IDENTIFIER ':' statement
  179                  | CASE constant_expression ':' statement
  180                  | DEFAULT ':' statement

  181 compound_statement: '{' block_item_list_opt '}'

  182 block_item_list_opt: block_item_list
  183                    | %empty

  184 block_item_list: block_item
  185                | block_item_list M block_item

  186 block_item: declaration
  187           | statement

  188 expression_statement: expression_opt ';'

  189 expression_opt: expression
  190               | %empty

  191 selection_statement: IF '(' expression N ')' M statement N ELSE M statement
  192                    | IF '(' expression N ')' M statement
  193                    | SWITCH '(' expression ')' statement

  194 iteration_statement: WHILE '(' M expression N ')' M statement
  195                    | DO M statement WHILE '(' M expression N ')' ';'
  196                    | FOR '(' expression_opt ';' M expression_opt N ';' M expression_opt N ')' M statement
  197                    | FOR '(' declaration expression_opt ';' expression_opt ')' statement

  198 jump_statement: GOTO IDENTIFIER ';'
  199               | CONTINUE ';'
  200               | BREAK ';'
  201               | RETURN expression_opt ';'

  202 translation_unit: external_declaration
  203                 | translation_unit external_declaration

  204 external_declaration: function_definition
  205                     | declaration

  206 function_definition: declaration_specifiers declarator declaration_list_opt compound_statement

  207 declaration_list_opt: declaration_list
  208                     | %empty

  209 declaration_list: declaration
  210                 | declaration_list declaration


Terminals, with rules where they appear

    $end (0) 0
    '!' (33) 34
    '%' (37) 40
    '&' (38) 29 56
    '(' (40) 8 12 17 18 28 36 134 139 140 191 192 193 194 195 196 197
    ')' (41) 8 12 17 18 28 36 134 139 140 191 192 193 194 195 196 197
    '*' (42) 30 38 138 147 148
    '+' (43) 31 42
    ',' (44) 18 20 82 93 118 123 152 154 158 162 164
    '-' (45) 32 43
    '.' (46) 13 171
    '/' (47) 39
    ':' (58) 66 178 179 180
    ';' (59) 83 188 195 196 197 198 199 200 201
    '<' (60) 48
    '=' (61) 67 95 125 167
    '>' (62) 49
    '?' (63) 66
    '[' (91) 11 135 136 137 138 170
    ']' (93) 11 135 136 137 138 170
    '^' (94) 58
    '{' (123) 17 18 117 118 161 162 181
    '|' (124) 60
    '}' (125) 17 18 117 118 161 162 181
    '~' (126) 33
    error (256)
    AUTO (258) 98
    BREAK (259) 200
    CASE (260) 179
    CHAR (261) 101
    CONST (262) 126
    CONTINUE (263) 199
    DEFAULT (264) 180
    DO (265) 195
    DOUBLE (266) 106
    ELSE (267) 191
    ENUM (268) 117 118 119
    EXTERN (269) 96
    FLOAT (270) 105
    FOR (271) 196 197
    GOTO (272) 198
    IF (273) 191 192
    INLINE (274) 129
    INT (275) 103
    LONG (276) 104
    REGISTER (277) 99
    RESTRICT (278) 127
    RETURN (279) 201
    SHORT (280) 102
    SIGNED (281) 107
    SIZEOF (282) 27 28
    STATIC (283) 97 136 137
    STRUCT (284)
    SWITCH (285) 193
    TYPEDEF (286)
    UNION (287)
    UNSIGNED (288) 108
    VOID (289) 100
    VOLATILE (290) 128
    WHILE (291) 194 195
    BOOL (292) 109
    COMPLEX (293) 110
    IMAGINARY (294) 111
    POINTER (295) 14
    INCREMENT (296) 15 24
    DECREMENT (297) 16 25
    LEFT_SHIFT (298) 45
    RIGHT_SHIFT (299) 46
    LESS_EQUALS (300) 50
    GREATER_EQUALS (301) 51
    EQUALS (302) 53
    NOT_EQUALS (303) 54
    AND (304) 62
    OR (305) 64
    ELLIPSIS (306) 152
    MULTIPLY_ASSIGN (307) 68
    DIVIDE_ASSIGN (308) 69
    MODULO_ASSIGN (309) 70
    ADD_ASSIGN (310) 71
    SUBTRACT_ASSIGN (311) 72
    LEFT_SHIFT_ASSIGN (312) 73
    RIGHT_SHIFT_ASSIGN (313) 74
    AND_ASSIGN (314) 75
    XOR_ASSIGN (315) 76
    OR_ASSIGN (316) 77
    SINGLE_LINE_COMMENT (317)
    MULTI_LINE_COMMENT (318)
    IDENTIFIER <idl> (319) 3 9 13 14 119 120 133 157 158 171 178 198
    INTEGER_CONSTANT <intval> (320) 4
    FLOATING_CONSTANT <floatval> (321) 5
    ENUMERATION_CONSTANT <strval> (322)
    CHAR_CONST <charval> (323) 6
    STRING_LITERAL <strval> (324) 7
    UNARY (325)
    IF_CONFLICT (326)


Nonterminals, with rules where they appear

    $accept (96)
        on left: 0
    M <instr> (97)
        on left: 1
        on right: 62 64 66 185 191 192 194 195 196
    N <nextlist> (98)
        on left: 2
        on right: 66 191 192 194 195 196
    primary_expression <expon> (99)
        on left: 3 4 5 6 7 8
        on right: 10
    enumeration_constant (100)
        on left: 9
        on right: 124 125
    postfix_expression <expon> (101)
        on left: 10 11 12 13 14 15 16 17 18
        on right: 11 12 13 14 15 16 23
    argument_expression_list <argsl> (102)
        on left: 19 20
        on right: 20 21
    argument_expression_list_opt <argsl> (103)
        on left: 21 22
        on right: 12
    unary_expression <expon> (104)
        on left: 23 24 25 26 27 28
        on right: 24 25 27 35 79
    unary_operator <charval> (105)
        on left: 29 30 31 32 33 34
        on right: 26
    cast_expression <expon> (106)
        on left: 35 36
        on right: 26 36 37 38 39 40
    multiplicative_expression <expon> (107)
        on left: 37 38 39 40
        on right: 38 39 40 41 42 43
    additive_expression <expon> (108)
        on left: 41 42 43
        on right: 42 43 44 45 46
    shift_expression <expon> (109)
        on left: 44 45 46
        on right: 45 46 47 48 49 50 51
    relational_expression <expon> (110)
        on left: 47 48 49 50 51
        on right: 48 49 50 51 52 53 54
    equality_expression <expon> (111)
        on left: 52 53 54
        on right: 53 54 55 56
    AND_expression <expon> (112)
        on left: 55 56
        on right: 56 57 58
    exclusive_OR_expression <expon> (113)
        on left: 57 58
        on right: 58 59 60
    inclusive_OR_expression <expon> (114)
        on left: 59 60
        on right: 60 61 62
    logical_AND_expression <expon> (115)
        on left: 61 62
        on right: 62 63 64
    logical_OR_expression <expon> (116)
        on left: 63 64
        on right: 64 65 66
    conditional_expression <expon> (117)
        on left: 65 66
        on right: 66 78 80
    assignment_operator (118)
        on left: 67 68 69 70 71 72 73 74 75 76 77
        on right: 79
    assignment_expression <expon> (119)
        on left: 78 79
        on right: 19 20 79 81 82 136 137 143 160
    constant_expression <expon> (120)
        on left: 80
        on right: 125 170 179
    expression <expon> (121)
        on left: 81 82
        on right: 8 11 66 82 189 191 192 193 194 195
    declaration <expon> (122)
        on left: 83
        on right: 186 197 205 209 210
    init_declarator_list_opt <expon> (123)
        on left: 84 85
        on right: 83
    declaration_specifiers <decl> (124)
        on left: 86 87 88 89
        on right: 83 90 155 156 206
    declaration_specifiers_opt (125)
        on left: 90 91
        on right: 86 87 88 89
    init_declarator_list <expon> (126)
        on left: 92 93
        on right: 84 93
    init_declarator <expon> (127)
        on left: 94 95
        on right: 92 93
    storage_class_specifier (128)
        on left: 96 97 98 99
        on right: 86
    type_specifier <decl> (129)
        on left: 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 87 113
    specifier_qualifier_list <decl> (130)
        on left: 113 114
        on right: 115 159
    specifier_qualifier_list_opt (131)
        on left: 115 116
        on right: 113 114
    enum_specifier (132)
        on left: 117 118 119
        on right: 112
    identifier_opt <expon> (133)
        on left: 120 121
        on right: 117 118
    enumerator_list (134)
        on left: 122 123
        on right: 117 118 123
    enumerator (135)
        on left: 124 125
        on right: 122 123
    type_qualifier (136)
        on left: 126 127 128
        on right: 88 114 149 150
    function_specifier (137)
        on left: 129
        on right: 89
    declarator <expon> (138)
        on left: 130
        on right: 94 95 134 155 206
    pointer_opt <decl> (139)
        on left: 131 132
        on right: 130
    direct_declarator <expon> (140)
        on left: 133 134 135 136 137 138 139 140
        on right: 130 135 136 137 138 139 140
    type_qualifier_list_opt (141)
        on left: 141 142
        on right: 135 136 138 147 148
    assignment_expression_opt <expon> (142)
        on left: 143 144
        on right: 135
    identifier_list_opt (143)
        on left: 145 146
        on right: 140
    pointer <decl> (144)
        on left: 147 148
        on right: 131 148
    type_qualifier_list (145)
        on left: 149 150
        on right: 137 141 150
    parameter_type_list (146)
        on left: 151 152
        on right: 139
    parameter_list (147)
        on left: 153 154
        on right: 151 152 154
    parameter_declaration (148)
        on left: 155 156
        on right: 153 154
    identifier_list (149)
        on left: 157 158
        on right: 145 158
    type_name <decl> (150)
        on left: 159
        on right: 17 18 28 36
    initializer <expon> (151)
        on left: 160 161 162
        on right: 95 163 164
    initializer_list (152)
        on left: 163 164
        on right: 17 18 161 162 164
    designation_opt (153)
        on left: 165 166
        on right: 163 164
    designation (154)
        on left: 167
        on right: 165
    designator_list (155)
        on left: 168 169
        on right: 167 169
    designator (156)
        on left: 170 171
        on right: 168 169
    statement <nextlist> (157)
        on left: 172 173 174 175 176 177
        on right: 178 179 180 187 191 192 193 194 195 196 197
    labeled_statement <nextlist> (158)
        on left: 178 179 180
        on right: 172
    compound_statement <nextlist> (159)
        on left: 181
        on right: 173 206
    block_item_list_opt <nextlist> (160)
        on left: 182 183
        on right: 181
    block_item_list <nextlist> (161)
        on left: 184 185
        on right: 182 185
    block_item <nextlist> (162)
        on left: 186 187
        on right: 184 185
    expression_statement <expon> (163)
        on left: 188
        on right: 174
    expression_opt <expon> (164)
        on left: 189 190
        on right: 188 196 197 201
    selection_statement <nextlist> (165)
        on left: 191 192 193
        on right: 175
    iteration_statement <nextlist> (166)
        on left: 194 195 196 197
        on right: 176
    jump_statement <nextlist> (167)
        on left: 198 199 200 201
        on right: 177
    translation_unit (168)
        on left: 202 203
        on right: 0 203
    external_declaration (169)
        on left: 204 205
        on right: 202 203
    function_definition (170)
        on left: 206
        on right: 204
    declaration_list_opt (171)
        on left: 207 208
        on right: 206
    declaration_list (172)
        on left: 209 210
        on right: 207 210


State 0

    0 $accept: . translation_unit $end

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    translation_unit         go to state 29
    external_declaration     go to state 30
    function_definition      go to state 31


State 1

   98 storage_class_specifier: AUTO .

    $default  reduce using rule 98 (storage_class_specifier)


State 2

  101 type_specifier: CHAR .

    $default  reduce using rule 101 (type_specifier)


State 3

  126 type_qualifier: CONST .

    $default  reduce using rule 126 (type_qualifier)


State 4

  106 type_specifier: DOUBLE .

    $default  reduce using rule 106 (type_specifier)


State 5

  117 enum_specifier: ENUM . identifier_opt '{' enumerator_list '}'
  118               | ENUM . identifier_opt '{' enumerator_list ',' '}'
  119               | ENUM . IDENTIFIER

    IDENTIFIER  shift, and go to state 32

    $default  reduce using rule 121 (identifier_opt)

    identifier_opt  go to state 33


State 6

   96 storage_class_specifier: EXTERN .

    $default  reduce using rule 96 (storage_class_specifier)


State 7

  105 type_specifier: FLOAT .

    $default  reduce using rule 105 (type_specifier)


State 8

  129 function_specifier: INLINE .

    $default  reduce using rule 129 (function_specifier)


State 9

  103 type_specifier: INT .

    $default  reduce using rule 103 (type_specifier)


State 10

  104 type_specifier: LONG .

    $default  reduce using rule 104 (type_specifier)


State 11

   99 storage_class_specifier: REGISTER .

    $default  reduce using rule 99 (storage_class_specifier)


State 12

  127 type_qualifier: RESTRICT .

    $default  reduce using rule 127 (type_qualifier)


State 13

  102 type_specifier: SHORT .

    $default  reduce using rule 102 (type_specifier)


State 14

  107 type_specifier: SIGNED .

    $default  reduce using rule 107 (type_specifier)


State 15

   97 storage_class_specifier: STATIC .

    $default  reduce using rule 97 (storage_class_specifier)


State 16

  108 type_specifier: UNSIGNED .

    $default  reduce using rule 108 (type_specifier)


State 17

  100 type_specifier: VOID .

    $default  reduce using rule 100 (type_specifier)


State 18

  128 type_qualifier: VOLATILE .

    $default  reduce using rule 128 (type_qualifier)


State 19

  109 type_specifier: BOOL .

    $default  reduce using rule 109 (type_specifier)


State 20

  110 type_specifier: COMPLEX .

    $default  reduce using rule 110 (type_specifier)


State 21

  111 type_specifier: IMAGINARY .

    $default  reduce using rule 111 (type_specifier)


State 22

  205 external_declaration: declaration .

    $default  reduce using rule 205 (external_declaration)


State 23

   83 declaration: declaration_specifiers . init_declarator_list_opt ';'
  206 function_definition: declaration_specifiers . declarator declaration_list_opt compound_statement

    '*'  shift, and go to state 34

    ';'       reduce using rule 85 (init_declarator_list_opt)
    $default  reduce using rule 132 (pointer_opt)

    init_declarator_list_opt  go to state 35
    init_declarator_list      go to state 36
    init_declarator           go to state 37
    declarator                go to state 38
    pointer_opt               go to state 39
    pointer                   go to state 40


State 24

   86 declaration_specifiers: storage_class_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 42
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 25

   87 declaration_specifiers: type_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 43
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 26

  112 type_specifier: enum_specifier .

    $default  reduce using rule 112 (type_specifier)


State 27

   88 declaration_specifiers: type_qualifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 44
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 28

   89 declaration_specifiers: function_specifier . declaration_specifiers_opt

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    $default  reduce using rule 91 (declaration_specifiers_opt)

    declaration_specifiers      go to state 41
    declaration_specifiers_opt  go to state 45
    storage_class_specifier     go to state 24
    type_specifier              go to state 25
    enum_specifier              go to state 26
    type_qualifier              go to state 27
    function_specifier          go to state 28


State 29

    0 $accept: translation_unit . $end
  203 translation_unit: translation_unit . external_declaration

    $end       shift, and go to state 46
    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21

    declaration              go to state 22
    declaration_specifiers   go to state 23
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    external_declaration     go to state 47
    function_definition      go to state 31


State 30

  202 translation_unit: external_declaration .

    $default  reduce using rule 202 (translation_unit)


State 31

  204 external_declaration: function_definition .

    $default  reduce using rule 204 (external_declaration)


State 32

  119 enum_specifier: ENUM IDENTIFIER .
  120 identifier_opt: IDENTIFIER .

    '{'       reduce using rule 120 (identifier_opt)
    $default  reduce using rule 119 (enum_specifier)


State 33

  117 enum_specifier: ENUM identifier_opt . '{' enumerator_list '}'
  118               | ENUM identifier_opt . '{' enumerator_list ',' '}'

    '{'  shift, and go to state 48


State 34

  147 pointer: '*' . type_qualifier_list_opt
  148        | '*' . type_qualifier_list_opt pointer

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 142 (type_qualifier_list_opt)

    type_qualifier           go to state 49
    type_qualifier_list_opt  go to state 50
    type_qualifier_list      go to state 51


State 35

   83 declaration: declaration_specifiers init_declarator_list_opt . ';'

    ';'  shift, and go to state 52


State 36

   84 init_declarator_list_opt: init_declarator_list .
   93 init_declarator_list: init_declarator_list . ',' init_declarator

    ','  shift, and go to state 53

    $default  reduce using rule 84 (init_declarator_list_opt)


State 37

   92 init_declarator_list: init_declarator .

    $default  reduce using rule 92 (init_declarator_list)


State 38

   94 init_declarator: declarator .
   95                | declarator . '=' initializer
  206 function_definition: declaration_specifiers declarator . declaration_list_opt compound_statement

    AUTO       shift, and go to state 1
    CHAR       shift, and go to state 2
    CONST      shift, and go to state 3
    DOUBLE     shift, and go to state 4
    ENUM       shift, and go to state 5
    EXTERN     shift, and go to state 6
    FLOAT      shift, and go to state 7
    INLINE     shift, and go to state 8
    INT        shift, and go to state 9
    LONG       shift, and go to state 10
    REGISTER   shift, and go to state 11
    RESTRICT   shift, and go to state 12
    SHORT      shift, and go to state 13
    SIGNED     shift, and go to state 14
    STATIC     shift, and go to state 15
    UNSIGNED   shift, and go to state 16
    VOID       shift, and go to state 17
    VOLATILE   shift, and go to state 18
    BOOL       shift, and go to state 19
    COMPLEX    shift, and go to state 20
    IMAGINARY  shift, and go to state 21
    '='        shift, and go to state 54

    '{'       reduce using rule 208 (declaration_list_opt)
    $default  reduce using rule 94 (init_declarator)

    declaration              go to state 55
    declaration_specifiers   go to state 56
    storage_class_specifier  go to state 24
    type_specifier           go to state 25
    enum_specifier           go to state 26
    type_qualifier           go to state 27
    function_specifier       go to state 28
    declaration_list_opt     go to state 57
    declaration_list         go to state 58


State 39

  130 declarator: pointer_opt . direct_declarator

    IDENTIFIER  shift, and go to state 59
    '('         shift, and go to state 60

    direct_declarator  go to state 61


State 40

  131 pointer_opt: pointer .

    $default  reduce using rule 131 (pointer_opt)


State 41

   90 declaration_specifiers_opt: declaration_specifiers .

    $default  reduce using rule 90 (declaration_specifiers_opt)


State 42

   86 declaration_specifiers: storage_class_specifier declaration_specifiers_opt .

    $default  reduce using rule 86 (declaration_specifiers)


State 43

   87 declaration_specifiers: type_specifier declaration_specifiers_opt .

    $default  reduce using rule 87 (declaration_specifiers)


State 44

   88 declaration_specifiers: type_qualifier declaration_specifiers_opt .

    $default  reduce using rule 88 (declaration_specifiers)


State 45

   89 declaration_specifiers: function_specifier declaration_specifiers_opt .

    $default  reduce using rule 89 (declaration_specifiers)


State 46

    0 $accept: translation_unit $end .

    $default  accept


State 47

  203 translation_unit: translation_unit external_declaration .

    $default  reduce using rule 203 (translation_unit)


State 48

  117 enum_specifier: ENUM identifier_opt '{' . enumerator_list '}'
  118               | ENUM identifier_opt '{' . enumerator_list ',' '}'

    IDENTIFIER  shift, and go to state 62

    enumeration_constant  go to state 63
    enumerator_list       go to state 64
    enumerator            go to state 65


State 49

  149 type_qualifier_list: type_qualifier .

    $default  reduce using rule 149 (type_qualifier_list)


State 50

  147 pointer: '*' type_qualifier_list_opt .
  148        | '*' type_qualifier_list_opt . pointer

    '*'  shift, and go to state 34

    $default  reduce using rule 147 (pointer)

    pointer  go to state 66


State 51

  141 type_qualifier_list_opt: type_qualifier_list .
  150 type_qualifier_list: type_qualifier_list . type_qualifier

    CONST     shift, and go to state 3
    RESTRICT  shift, and go to state 12
    VOLATILE  shift, and go to state 18

    $default  reduce using rule 141 (type_qualifier_list_opt)

    type_qualifier  go to state 67


State 52

   83 declaration: declaration_specifiers init_declarator_list_opt ';' .

    $default  reduce using rule 83 (declaration)


State 53

   93 init_declarator_list: init_declarator_list ',' . init_declarator

    '*'  shift, and go to state 34

    $default  reduce using rule 132 (pointer_opt)

    init_declarator  go to state 68
    declarator       go to state 69
    pointer_opt      go to state 39
    pointer          go to state 40


State 54

   95 init_declarator: declarator '=' . initializer
